패키징 파일 변경

--- a/www/index.html
+++ b/www/index.html
@@ -54,7 +54,7 @@
 
 <body>
     <div class="app">
-        <h1>Gallerybear</h1>
+        <h1>아토피뉴스</h1>
         <div id="deviceready" class="blink">
             <p class="event listening">Connecting to Device</p>
             <p class="event received">Device is Ready</p>
