--- a/platforms/browser/www/main.html
+++ b/platforms/browser/www/main.html
@@ -28,15 +28,14 @@
 <header class="bar bar-nav">
  <a class="icon icon-left-nav pull-left"  href="#"  onclick="open_left();"></a>
   <a class="icon icon-gear pull-right"  onclick="open_right();"></a>
-  <h1 class="title">대학 4H</h1>
+  <h1 class="title">아토피뉴스</h1>
 </header>
-<div id="top_banner" style="height: 50px; display:none;">
+<div id="top_banner" style="height: 40px; ">
 </div>
-<div id="map" data-uk-grid>map loading...
-</div>
-<div id="company_list" style="overflow-y: scroll; width:100%; height:100%;  ">
+<div id="main_contents" style="overflow-y: scroll; width:100%; height:100%;  padding-bottom: 100px;">
 </div>
 
+</div>
 <div id="add_contents_uk_modal" class="uk-modal" aria-hidden="true" style="display: none; overflow-y: scroll;">
                                 <div class="uk-modal-dialog">
                                     <button type="button" class="uk-modal-close uk-close"></button>
@@ -166,7 +165,28 @@
 
                             </div>
 
-
+<nav class="bar bar-tab">
+  <a class="tab-item active" href="#">
+    <span class="icon icon-home"></span>
+    <span class="tab-label">Home</span>
+  </a>
+  <a class="tab-item" href="#">
+    <span class="icon icon-person"></span>
+    <span class="tab-label">Profile</span>
+  </a>
+  <a class="tab-item" href="#">
+    <span class="icon icon-star-filled"></span>
+    <span class="tab-label">Favorites</span>
+  </a>
+  <a class="tab-item" href="#">
+    <span class="icon icon-search"></span>
+    <span class="tab-label">Search</span>
+  </a>
+  <a class="tab-item" href="#">
+    <span class="icon icon-gear"></span>
+    <span class="tab-label">Settings</span>
+  </a>
+</nav>
     <script type="text/javascript" src="cordova.js"></script>
      <script type="text/javascript" charset="utf-8" src="js/PushNotification.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
