--- a/www/shop.html
+++ b/www/shop.html
@@ -30,12 +30,13 @@
   <a class="icon icon-gear pull-right"  onclick="open_right();"></a>
   <h1 class="title">아토피뉴스</h1>
 </header>
-<div id="top_banner" style="height: 40px; ">
+<div id="top_banner" style="height: 50px; display:none;">
 </div>
-<div id="main_contents" style="overflow-y: scroll; width:100%; height:100%;  padding-bottom: 100px;">
+<div id="map" data-uk-grid>map loading...
+</div>
+<div id="company_list" style="overflow-y: scroll; width:100%; height:100%;  ">
 </div>
 
-</div>
 <div id="add_contents_uk_modal" class="uk-modal" aria-hidden="true" style="display: none; overflow-y: scroll;">
                                 <div class="uk-modal-dialog">
                                     <button type="button" class="uk-modal-close uk-close"></button>
