--- a/platforms/browser/www/main.html
+++ b/platforms/browser/www/main.html
@@ -166,21 +166,21 @@
                             </div>
 
 <nav class="bar bar-tab">
-  <a class="tab-item active" href="#">
+  <a class="tab-item active" href="#" onclick="main_show()">
     <span class="icon icon-home"></span>
-    <span class="tab-label">Home</span>
+    <span class="tab-label">아토피뉴스</span>
   </a>
   <a class="tab-item" href="#">
-    <span class="icon icon-person"></span>
-    <span class="tab-label">Profile</span>
+    <span class="icon icon-compose"></span>
+    <span class="tab-label">커뮤니티</span>
   </a>
   <a class="tab-item" href="#">
-    <span class="icon icon-star-filled"></span>
-    <span class="tab-label">Favorites</span>
+    <span class="icon uk-icon-comments"></span>
+    <span class="tab-label">대화방</span>
   </a>
   <a class="tab-item" href="#">
-    <span class="icon icon-search"></span>
-    <span class="tab-label">Search</span>
+    <span class="icon uk-icon-camera"></span>
+    <span class="tab-label">사진공유</span>
   </a>
   <a class="tab-item" href="#">
     <span class="icon icon-gear"></span>
