--- a/www/main.html
+++ b/www/main.html
@@ -85,7 +85,7 @@
                                     </div>
                                     <p id="modal_contents">LOADING DATA...</p>
                                     <div class="uk-modal-footer uk-text-right" id="modal_btn">
-                                        <button type="button" class="uk-button">Cancel</button>
+                                        <button type="button" class="uk-button uk-modal-close">Cancel</button>
                                         <button type="button" class="uk-button uk-button-primary">Save</button>
                                     </div>
                                 </div>
@@ -191,7 +191,7 @@
     <span class="icon uk-icon-comments"></span>
     <span class="tab-label">대화방</span>
   </a>
-  <a class="tab-item" href="#">
+  <a class="tab-item" href="#"  id="photo_icon"  href="#"  onclick="photo_show()">
     <span class="icon uk-icon-camera"></span>
     <span class="tab-label">사진공유</span>
   </a>
