커뮤니티 수정;

--- a/platforms/browser/www/login.html
+++ b/platforms/browser/www/login.html
@@ -57,7 +57,7 @@
   </div>
   <div class="input-row">
     <label>PASSWORD</label>
-    <input type="passwrod" placeholder="password" id="password" name="password">
+    <input type="password" placeholder="password" id="password" name="password">
   </div>
   <span class="btn btn-positive btn-block" id="login_btn">LOGIN</span>
   <span class="btn btn-negative btn-block" id="find_pw_btn">FIND PASS</span>
