--- a/platforms/browser/www/main.html
+++ b/platforms/browser/www/main.html
@@ -71,7 +71,7 @@
                                     </div>
                                     <p id="add_modal_contents">LOADING DATA...</p>
                                     <div class="uk-modal-footer uk-text-right" id="modal_btn">
-                                        <button type="button" class="uk-button">Cancel</button>
+                                        <button type="button" class="uk-button uk-modal-close">Cancel</button>
                                         <button type="button" class="uk-button uk-button-primary">Save</button>
                                     </div>
                                 </div>
@@ -183,7 +183,7 @@
     <span class="icon icon-home"></span>
     <span class="tab-label">아토피뉴스</span>
   </a>
-  <a class="tab-item" href="#">
+  <a class="tab-item" href="#" id="board_icon" onclick="freeboard_show() ">
     <span class="icon icon-compose"></span>
     <span class="tab-label">커뮤니티</span>
   </a>
