아토피블로그추가;

--- a/platforms/browser/www/main.html
+++ b/platforms/browser/www/main.html
@@ -199,9 +199,9 @@
     <span class="icon uk-icon-shopping-bag"></span>
     <span class="tab-label">쇼핑</span>
   </a>
-  <a class="tab-item" href="#">
-    <span class="icon icon-gear"></span>
-    <span class="tab-label">Settings</span>
+  <a class="tab-item" href="#"  id="blog_icon" href="#"  onclick="blog_show()">
+    <span class="icon icon-pages"></span>
+    <span class="tab-label">블로그</span>
   </a>
 </nav>
     <script type="text/javascript" src="cordova.js"></script>
