--- a/www/main.html
+++ b/www/main.html
@@ -203,10 +203,14 @@
     <span class="icon icon-pages"></span>
     <span class="tab-label">블로그</span>
   </a>
+  <a class="tab-item" href="#"  id="exit_icon" href="#"  onclick="exit_show()">
+    <span class="icon uk-icon-close"></span>
+    <span class="tab-label">종료</span>
+  </a>
 </nav>
-    <script type="text/javascript" src="cordova.js"></script>
      <script type="text/javascript" charset="utf-8" src="js/PushNotification.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/menu.js"></script>
    <script type="text/javascript" src="js/marker.js"></script>
     
     <script type="text/javascript">
