--- a/www/main.html
+++ b/www/main.html
@@ -259,25 +259,24 @@
   </a>
   <a class="tab-item" href="#" id="board_icon" onclick="freeboard_show() ">
     <span class="icon icon-compose"></span>
-    <span class="tab-label">커뮤니티</span>
+    <span class="tab-label">아토피그램</span>
   </a>
   <a class="tab-item"  id="chat_icon"  href="#"  onclick="chat_show()">
     <span class="icon uk-icon-comments"></span>
-    <span class="tab-label">KU4H톡</span>
+    <span class="tab-label">뉴스</span>
   </a>
   <a class="tab-item" href="#"  id="photo_icon"  href="#"  onclick="photo_show()">
     <span class="icon uk-icon-camera"></span>
-    <span class="tab-label">앨범</span>
+    <span class="tab-label">리뷰</span>
+  </a>
+   <a class="tab-item" href="#" id="shop_icon" href="#"  onclick="shop_show()">
+    <span class="icon uk-icon-shopping-bag"></span>
+    <span class="tab-label">6LOM</span>
   </a>
    <a class="tab-item" href="#" id="shop_icon" href="#"  onclick="shop_show()">
     <span class="icon uk-icon-shopping-bag"></span>
     <span class="tab-label">BIZ</span>
   </a>
-  <a class="tab-item" href="#"  id="blog_icon" href="#"  onclick="blog_show()">
-    <span class="icon icon-pages"></span>
-    <span class="tab-label">학교</span>
-  </a>
-  
   <a class="tab-item" href="#"  id="exit_icon" href="#"  onclick="exit_show()">
     <span class="icon uk-icon-close"></span>
     <span class="tab-label">종료</span>
