--- a/www/main.html
+++ b/www/main.html
@@ -30,7 +30,7 @@
 <header class="bar bar-nav">
  <a class="icon icon-gear pull-right"  onclick="open_right();"></a>
 
-  <h1 class="title">KU4H</h1>
+  <h1 class="title">아토피뉴스</h1>
 </header>
 <div id="top_banner" style="height: 40px; ">
 </div>
@@ -257,9 +257,13 @@
     <span class="icon icon-home"></span>
     <span class="tab-label">홈</span>
   </a>
-  <a class="tab-item" href="#" id="board_icon" onclick="freeboard_show() ">
+  <a class="tab-item" href="#" id="board_icon" onclick="photo_show()">
     <span class="icon icon-compose"></span>
     <span class="tab-label">아토피그램</span>
+  </a>
+    <a class="tab-item" href="#" id="shop_icon" href="#"  onclick="shop_show()">
+    <span class="icon uk-icon-shopping-bag"></span>
+    <span class="tab-label">6LOM</span>
   </a>
   <a class="tab-item"  id="chat_icon"  href="#"  onclick="chat_show()">
     <span class="icon uk-icon-comments"></span>
@@ -269,10 +273,7 @@
     <span class="icon uk-icon-camera"></span>
     <span class="tab-label">리뷰</span>
   </a>
-   <a class="tab-item" href="#" id="shop_icon" href="#"  onclick="shop_show()">
-    <span class="icon uk-icon-shopping-bag"></span>
-    <span class="tab-label">6LOM</span>
-  </a>
+ 
    <a class="tab-item" href="#" id="shop_icon" href="#"  onclick="shop_show()">
     <span class="icon uk-icon-shopping-bag"></span>
     <span class="tab-label">BIZ</span>
