--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -45,7 +45,7 @@
 
 <body>
     <div class="app">
-        <h1>KU4H</h1>
+        <h1>아토피뉴스</h1>
         <div id="deviceready" class="blink">
             <p class="event listening">연결 중입니다.</p>
             <p class="event received">연결되었습니다</p>
