--- a/platforms/browser/www/main.html
+++ b/platforms/browser/www/main.html
@@ -30,7 +30,7 @@
 <header class="bar bar-nav">
  <a class="icon icon-gear pull-right"  onclick="open_right();"></a>
 
-  <h1 class="title">KU4H</h1>
+  <h1 class="title">아토피뉴스</h1>
 </header>
 <div id="top_banner" style="height: 40px; ">
 </div>
@@ -257,27 +257,27 @@
     <span class="icon icon-home"></span>
     <span class="tab-label">홈</span>
   </a>
-  <a class="tab-item" href="#" id="board_icon" onclick="freeboard_show() ">
+  <a class="tab-item" href="#" id="board_icon" onclick="photo_show()">
     <span class="icon icon-compose"></span>
-    <span class="tab-label">커뮤니티</span>
+    <span class="tab-label">아토피그램</span>
+  </a>
+    <a class="tab-item" href="#" id="shop_icon" href="#"  onclick="shop_show()">
+    <span class="icon uk-icon-shopping-bag"></span>
+    <span class="tab-label">6LOM</span>
   </a>
   <a class="tab-item"  id="chat_icon"  href="#"  onclick="chat_show()">
     <span class="icon uk-icon-comments"></span>
-    <span class="tab-label">KU4H톡</span>
+    <span class="tab-label">뉴스</span>
   </a>
   <a class="tab-item" href="#"  id="photo_icon"  href="#"  onclick="photo_show()">
     <span class="icon uk-icon-camera"></span>
-    <span class="tab-label">앨범</span>
+    <span class="tab-label">리뷰</span>
   </a>
+ 
    <a class="tab-item" href="#" id="shop_icon" href="#"  onclick="shop_show()">
     <span class="icon uk-icon-shopping-bag"></span>
     <span class="tab-label">BIZ</span>
   </a>
-  <a class="tab-item" href="#"  id="blog_icon" href="#"  onclick="blog_show()">
-    <span class="icon icon-pages"></span>
-    <span class="tab-label">학교</span>
-  </a>
-  
   <a class="tab-item" href="#"  id="exit_icon" href="#"  onclick="exit_show()">
     <span class="icon uk-icon-close"></span>
     <span class="tab-label">종료</span>
