--- a/www/main.html
+++ b/www/main.html
@@ -209,7 +209,7 @@
   </a>
     <a class="tab-item" href="#" id="shop_icon" href="#"  onclick="lom_show()">
     <span class="icon uk-icon-shopping-bag"></span>
-    <span class="tab-label">6LOM</span>
+    <span class="tab-label">6-LOM</span>
   </a>
   <a class="tab-item"  id="chat_icon"  href="#"  onclick="news_show()">
     <span class="icon uk-icon-comments"></span>
