--- a/platforms/browser/www/main.html
+++ b/platforms/browser/www/main.html
@@ -209,7 +209,11 @@
   </a>
     <a class="tab-item" href="#" id="shop_icon" href="#"  onclick="lom_show()">
     <span class="icon uk-icon-shopping-bag"></span>
-    <span class="tab-label">6LOM</span>
+    <span class="tab-label">6-LOM</span>
+  </a>
+   <a class="tab-item"  id="atopy_icon"  href="#"  onclick="atopy_show()">
+    <span class="icon uk-icon-institution"></span>
+    <span class="tab-label">아토피교실</span>
   </a>
   <a class="tab-item"  id="chat_icon"  href="#"  onclick="news_show()">
     <span class="icon uk-icon-comments"></span>
@@ -221,10 +225,7 @@
     <span class="icon uk-icon-shopping-bag"></span>
     <span class="tab-label">BIZ</span>
   </a>
-  <a class="tab-item" href="#"  id="exit_icon" href="#"  onclick="exit_show()">
-    <span class="icon uk-icon-close"></span>
-    <span class="tab-label">종료</span>
-  </a>
+ 
 </nav>
      <script type="text/javascript" charset="utf-8" src="js/PushNotification.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
